[package]
name = "icu_tool"
version = "0.1.12-1"
edition = "2021"
authors = ["Benign X", "W-Mai"]
homepage = "https://github.com/W-Mai/icu"
repository = "https://github.com/W-Mai/icu"
description = "Image Converter Ultra"
license = "MIT"

[package.metadata.wix]
upgrade-guid = "368D15F1-EADD-452C-9348-A6A487536412"
path-guid = "35F78CC5-7F21-43C4-87B2-157DB5860DEE"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "icu"
path = "src/main.rs"

[dependencies]
icu_lib = { version = "0.1.11" }
clap = { version = "4.5.20", features = ["derive", "suggestions"] }
clap_complete = "4.5.1"
eframe = { version = "0.26.0", features = [
    "glow",
    "persistence", # Enable restoring app state when restarting the app.
] }
egui_plot = "0.26.0"
log = "0.4.20"
env_logger = "0.11.2"
serde_yaml = "0.9.33"
serde = { version = "1.0.197", features = ["derive"] }

[patch.crates-io]
icu_lib = { path = "icu_lib" }

[profile.release]
lto = true
opt-level = 3

[workspace]
members = [
    "icu_lib",
]

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
