[package]
name = "icu_lib"
version = "0.1.10"
edition = "2021"
authors = ["Benign X", "W-Mai"]
homepage = "https://github.com/W-Mai/icu"
repository = "https://github.com/W-Mai/icu"
description = "Image Converter Ultra Library"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
modular-bitfield = "0.11.2"
image = "0.24.8"
color_quant = "1.1.0"
log = "0.4.20"
env_logger = "0.11.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_01"
harness = false
